plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id 'maven-publish'
    id 'idea'
    id 'java'
}

group 'cc.minetale'
version 'LATEST'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compileOnly("org.projectlombok:lombok:1.18.22")
    annotationProcessor("org.projectlombok:lombok:1.18.22")

    implementation("org.reflections:reflections:0.10.2")

    compileOnly("cc.minetale:mLib:LATEST")
    compileOnly("cc.minetale:Quartz:LATEST")
}

sourceCompatibility = 17
targetCompatibility = 17

java {
    withJavadocJar()
    withSourcesJar()
}

shadowJar {
    classifier = null
}

publishing {
    publications {
        shadow(MavenPublication) { publication ->
            project.shadow.component(publication)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Jar) {
    destinationDirectory = file("../../Build")
}

task buildJar(dependsOn: ['publishToMavenLocal'])